# digdir-slack-bot

./: .gitignore  Dockerfile  README.md  bolt-config.yml  bolt.py  jobs.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: digdir-slack-bot-AutoDeployTrigger-f91f9261-5791-4778-a015-f55d5e2a578d.yml  digdir-slack-bot-test-AutoDeployTrigger-afe2fee5-038e-4bc0-9f8f-1b0061f69853.yml  main_digdir-slack-bot.yml  release_digdir-slack-bot.yml  test_digdir-slack-bot-test.yml
bots/: bot_config.py  choose_team.py  code_qa.py  config.py  docs_qa.py  github_qa.py  structured_log.py
channel_msg_categorize/: build_chain.py  config_chain.py  llm.py  main.py  prompts.py  run_chain.py
channel_msg_categorize/vectorstore/db_faiss/: index.pkl
code_qa/: ask_openai.py  chain.py  db_build.py  llm.py  main.py  prompts.py  update_summaries.py
code_qa/config/: config.yml
code_qa/prompts/: altinn3-csharp-code-summarize.txt
code_qa/vectorstore/db_faiss/: index.faiss  index.pkl
colbert/: config.py  config.yml  rerank.py
docs_qa/: chain.py  chains.py  config.py  db_build.py  extract_search_terms.py  generate_search_phrases.py  html_to_markdown.py  llm.py  main.py  preload_colbert.py  prompts.py  rag_colbert.py  rag_manual_colbert_rerank.py  rag_manual_stuff.py  rag_with_typesense.py  stage1_analyze.py  translate_answer.py  typesense.py  typesense_search.py  update_colbert_index.py
docs_qa/config/: config.yml
docs_qa/vectorstore/db_faiss/: index.pkl
dto/: llm_response.py
github_qa/: config.py  config.yml  prompts.py  rag_issues.py  sync_issues.py  typesense_search.py
outputs/: qa_is_it_possible_to_group_fields_together.py  qa_min_length.py
team_qa_choose/: build_chain.py  db_build.py  llm.py  main.py  prompts.py  run_chain.py
team_qa_choose/config/: config.yml
utils/: general.py  llm_utils.py  markdown.py  openai_utils.py  slack_utils.py
