[tool.poetry]
name = "Altinn Assistant"
version = "0.1.0"
description = ""
authors = ["Open Source contributors"]
license = ""
readme = "README.md"

[tool.poetry.scripts]
start = "main:app"

[tool.poetry.dependencies]
python = "^3.9"
faiss-cpu = "^1.7.4"
fastapi = "^0.108.0"
ipykernel = "^6.23.1"
langchain = "^0.1.0"
pypdf = "^3.9.0"
python-box = "7.1.1"
python-dotenv = "1.0.0"
uvicorn = "^0.22.0"
unstructured = "^0.11.0"
markdown = "^3.4.4"
openai = "^1.7.1"
slack-bolt = "^1.18.0"
tiktoken = "*"
instructor = "^0.4.6"
datamodel-code-generator = "^0.22.1"
typesense = "^0.18.0"
markdownify = "^0.11.6"
beautifulsoup4 = "^4.12.2"
ctransformers = "^0.2.27"
pytz = "^2023.3.post1"
supabase = "^2.0.1"
langchain-openai = "^0.0.2.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"